# monty

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  how-it-works.md  plan-todo.md  pyproject.toml
.claude/: settings.json
benches/: main.rs
crates/monty/: Cargo.toml
crates/monty-cli/src/: main.rs
crates/monty-js/: package-lock.json  package.json  wrapper.ts
crates/monty-js/__test__/: async.spec.ts  exceptions.spec.ts  repl.spec.ts  start.spec.ts
crates/monty-js/src/: monty_cls.rs
crates/monty-python/: Cargo.toml  README.md  monty.pyi
crates/monty-python/src/: dataclass.rs  exceptions.rs  lib.rs  monty_cls.rs  repl.rs  serialization.rs
crates/monty-python/tests/: test_async.py  test_dataclasses.py  test_exceptions.py  test_external.py  test_limits.py  test_print.py  test_re.py  test_repl.py  test_serialize.py  test_start.py
crates/monty-type-checking/src/: db.rs  lib.rs  type_check.rs
crates/monty-typeshed/: build.rs  update.py
crates/monty/benches/: main.rs
crates/monty/src/: args.rs  asyncio.rs  exception_private.rs  expressions.rs  for_iterator.rs  fstring.rs  heap.rs  heap_data.rs  heap_traits.rs  intern.rs  lib.rs  namespace.rs  object.rs  os.rs  parse.rs  prepare.rs  repl.rs  resource.rs  run.rs  run_progress.rs  signature.rs  sorting.rs  value.rs
crates/monty/src/builtins/: abs.rs  all.rs  any.rs  bin.rs  chr.rs  divmod.rs  enumerate.rs  filter.rs  getattr.rs  hash.rs  hex.rs  id.rs  isinstance.rs  len.rs  min_max.rs  oct.rs  ord.rs  print.rs  repr.rs  reversed.rs  round.rs  sorted.rs  sum.rs  type_.rs
crates/monty/src/bytecode/: compiler.rs  mod.rs  op.rs
crates/monty/src/bytecode/vm/: async_exec.rs  attr.rs  binary.rs  call.rs  collections.rs  compare.rs  exceptions.rs  format.rs  mod.rs  scheduler.rs
crates/monty/src/modules/: asyncio.rs  math.rs  mod.rs  os.rs  pathlib.rs  re.rs  sys.rs  typing.rs
crates/monty/src/types/: bytes.rs  dataclass.rs  dict.rs  dict_view.rs  iter.rs  list.rs  mod.rs  module.rs  namedtuple.rs  path.rs  property.rs  py_trait.rs  range.rs  re_match.rs  re_pattern.rs  set.rs  slice.rs  str.rs  tuple.rs  type.rs
crates/monty/test_cases/: builtin__more_iter_funcs.py  bytes__ops.py  closure__param_shadows_outer.py  closure__pep448.py  compare__mixed_types.py  comprehension__all.py  comprehension__scope.py  dict__ops.py  dict__unpack_type_error.py  dict__views.py  frozenset__ops.py  function__call_duplicate_kwargs.py  function__call_unpack.py  int__overflow_division.py  list__extend_not_iterable.py  list__ops.py  list__unpack_type_error.py  math__module.py  method__args_kwargs_unpacking.py  pathlib__import.py  re__basic.py  re__grouping.py  re__match.py  refcount__dict_keys_and.py  refcount__re_pattern_sub_error_paths.py  refcount__re_search_match.py  refcount__re_sub_error_paths.py  set__ops.py  set__unpack_type_error.py  str__join_no_args.py  str__join_non_string.py  str__join_not_iterable.py  str__join_too_many_args.py  str__ops.py  tuple__ops.py  tuple__unpack_type_error.py
crates/monty/tests/: regex.rs  repl.rs  resource_limits.rs
examples/web_scraper/: main.py  sub_agent.py
scripts/: check_imports.py
src/: args.rs  builtins.rs  callable.rs  evaluate.rs  exceptions.rs  exit.rs  expressions.rs  function.rs  heap.rs  lib.rs  main.rs  object.rs  object_types.rs  parse.rs  parse_error.rs  prepare.rs  run.rs  value.rs
src/values/: bytes.rs  dict.rs  list.rs  mod.rs  py_trait.rs  py_value.rs  str.rs  tuple.rs
test_cases/: id__singleton_distinct.py  pyobject__cycle_dict_self.py  pyobject__cycle_list_dict.py  pyobject__cycle_list_self.py  pyobject__cycle_multiple_refs.py  refcount__dict_basic.py  repr__cycle_detection.py
tests/: datatest_runner.rs  exit.rs  id.rs  json_serde.rs  main.rs  py_value.rs  try_from.rs
(+5 files in other folders)
