[package]
name = "monty"
readme = "../../README.md"
version = { workspace = true }
license = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "monty"
path = "src/lib.rs"

[dependencies]
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }
ruff_text_size = { workspace = true }
ahash = { version = "0.8.0", features = ["serde"] }
indexmap = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
strum = { version = "0.27", features = ["derive"] }
hashbrown = "0.16"
num-bigint = { workspace = true }
num-traits = { workspace = true }
num-integer = { workspace = true }
smallvec = { version = "1.13", features = ["serde"] }
itertools = "0.14.0"

[features]
# ref-count-return changes behavior to return information on reference counts to check they're correct
# should be used for testing only
ref-count-return = []
# ref-count-panic enables a Drop implementation on Value which catches heap allocated values that are dropped
# without being dereferenced.
# should be used for testing only
ref-count-panic = []

[dev-dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
# Use codspeed-criterion-compat for CI benchmarks, real criterion for local flamegraphs
codspeed-criterion-compat = "4.2.1"
criterion = "0.5"
datatest-stable = "0.2"
serde_json = "1.0"
pprof = { version = "0.15", features = ["flamegraph", "criterion"] }
similar = "2.7.0"

[build-dependencies]
pyo3-build-config = { version = "0.28", features = ["resolve-config"] }

[[bench]]
name = "main"
harness = false

[[test]]
name = "datatest_runner"
harness = false

[lints]
workspace = true
